# my-poly

./: Cargo.toml  Readme.md
src/: lib.rs
src/evaluations/multivariate/multilinear/: denseg.rs  mod.rs
src/polynomial/: mod.rs
src/polynomial/multivariate/: mod.rs  sparseg.rs
