[package]
name = "my-poly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
derivative = "2.2.0"
hashbrown = "0.14.5"
ark-test-curves = { version ="0.4.2", default-features = false, features = [ "bls12_381_curve", "bn384_small_two_adicity_curve", "mnt4_753_curve"] }
ark-ec = "0.4.2"
time = "0.3.36"
